main.ipynb updated

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "53ba3178",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f77b16e1",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7d0f5598",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b5a495c0",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "2dec469f",
    "metadata": {},
    "outputs": [
@@ -326,9 +326,403 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27e963d5",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "85f25621",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Y_production</th>\n",
+       "      <th>GHI_Bordeaux</th>\n",
+       "      <th>DNI_Bordeaux</th>\n",
+       "      <th>DHI_Bordeaux</th>\n",
+       "      <th>T_Bordeaux</th>\n",
+       "      <th>WS_Bordeaux</th>\n",
+       "      <th>Cloud_Bordeaux</th>\n",
+       "      <th>GHI_Marseille</th>\n",
+       "      <th>DNI_Marseille</th>\n",
+       "      <th>DHI_Marseille</th>\n",
+       "      <th>...</th>\n",
+       "      <th>GHI_Paris</th>\n",
+       "      <th>DNI_Paris</th>\n",
+       "      <th>DHI_Paris</th>\n",
+       "      <th>T_Paris</th>\n",
+       "      <th>WS_Paris</th>\n",
+       "      <th>Cloud_Paris</th>\n",
+       "      <th>hour_sin</th>\n",
+       "      <th>hour_cos</th>\n",
+       "      <th>month_sin</th>\n",
+       "      <th>month_cos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>105155.000000</td>\n",
+       "      <td>1.051550e+05</td>\n",
+       "      <td>1.051550e+05</td>\n",
+       "      <td>1.051550e+05</td>\n",
+       "      <td>1.051550e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>851.707470</td>\n",
+       "      <td>156.596434</td>\n",
+       "      <td>181.840327</td>\n",
+       "      <td>57.552755</td>\n",
+       "      <td>14.510989</td>\n",
+       "      <td>10.816425</td>\n",
+       "      <td>58.138733</td>\n",
+       "      <td>187.749456</td>\n",
+       "      <td>243.601236</td>\n",
+       "      <td>52.191127</td>\n",
+       "      <td>...</td>\n",
+       "      <td>142.896981</td>\n",
+       "      <td>166.578652</td>\n",
+       "      <td>54.666121</td>\n",
+       "      <td>12.673821</td>\n",
+       "      <td>13.264429</td>\n",
+       "      <td>62.028767</td>\n",
+       "      <td>2.461310e-06</td>\n",
+       "      <td>-1.233030e-04</td>\n",
+       "      <td>-4.885167e-03</td>\n",
+       "      <td>-2.210217e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1270.509811</td>\n",
+       "      <td>228.716123</td>\n",
+       "      <td>266.718201</td>\n",
+       "      <td>78.207594</td>\n",
+       "      <td>7.059454</td>\n",
+       "      <td>5.595896</td>\n",
+       "      <td>39.848920</td>\n",
+       "      <td>262.167975</td>\n",
+       "      <td>310.863053</td>\n",
+       "      <td>67.619027</td>\n",
+       "      <td>...</td>\n",
+       "      <td>216.149304</td>\n",
+       "      <td>256.250506</td>\n",
+       "      <td>75.674051</td>\n",
+       "      <td>7.209525</td>\n",
+       "      <td>6.833862</td>\n",
+       "      <td>39.249842</td>\n",
+       "      <td>7.071534e-01</td>\n",
+       "      <td>7.070669e-01</td>\n",
+       "      <td>7.057033e-01</td>\n",
+       "      <td>7.084939e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-11.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-5.300000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-10.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.000000e+00</td>\n",
+       "      <td>-1.000000e+00</td>\n",
+       "      <td>-1.000000e+00</td>\n",
+       "      <td>-1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.500000</td>\n",
+       "      <td>6.900000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.500000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>-7.071068e-01</td>\n",
+       "      <td>-7.071068e-01</td>\n",
+       "      <td>-8.660254e-01</td>\n",
+       "      <td>-8.660254e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>3.200000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>9.500000</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>15.500000</td>\n",
+       "      <td>14.250000</td>\n",
+       "      <td>10.500000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>12.150000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>78.000000</td>\n",
+       "      <td>1.224647e-16</td>\n",
+       "      <td>-1.836970e-16</td>\n",
+       "      <td>-2.449294e-16</td>\n",
+       "      <td>-1.836970e-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1478.500000</td>\n",
+       "      <td>264.500000</td>\n",
+       "      <td>327.150000</td>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>19.300000</td>\n",
+       "      <td>13.600000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>338.000000</td>\n",
+       "      <td>533.800000</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>226.000000</td>\n",
+       "      <td>275.100000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>17.800000</td>\n",
+       "      <td>17.250000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>7.071068e-01</td>\n",
+       "      <td>7.071068e-01</td>\n",
+       "      <td>5.000000e-01</td>\n",
+       "      <td>8.660254e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6697.500000</td>\n",
+       "      <td>950.000000</td>\n",
+       "      <td>937.400000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>40.500000</td>\n",
+       "      <td>52.900000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>959.000000</td>\n",
+       "      <td>952.600000</td>\n",
+       "      <td>429.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>915.000000</td>\n",
+       "      <td>940.200000</td>\n",
+       "      <td>410.000000</td>\n",
+       "      <td>40.800000</td>\n",
+       "      <td>50.700000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Y_production   GHI_Bordeaux   DNI_Bordeaux   DHI_Bordeaux  \\\n",
+       "count  105155.000000  105155.000000  105155.000000  105155.000000   \n",
+       "mean      851.707470     156.596434     181.840327      57.552755   \n",
+       "std      1270.509811     228.716123     266.718201      78.207594   \n",
+       "min       -11.500000       0.000000       0.000000       0.000000   \n",
+       "25%         0.000000       0.000000       0.000000       0.000000   \n",
+       "50%        17.000000      11.000000       3.200000       8.000000   \n",
+       "75%      1478.500000     264.500000     327.150000     101.000000   \n",
+       "max      6697.500000     950.000000     937.400000     440.000000   \n",
+       "\n",
+       "          T_Bordeaux    WS_Bordeaux  Cloud_Bordeaux  GHI_Marseille  \\\n",
+       "count  105155.000000  105155.000000   105155.000000  105155.000000   \n",
+       "mean       14.510989      10.816425       58.138733     187.749456   \n",
+       "std         7.059454       5.595896       39.848920     262.167975   \n",
+       "min        -5.300000       0.000000        0.000000       0.000000   \n",
+       "25%         9.500000       6.900000       15.000000       0.000000   \n",
+       "50%        14.000000       9.500000       68.000000      15.500000   \n",
+       "75%        19.300000      13.600000       99.000000     338.000000   \n",
+       "max        40.500000      52.900000      100.000000     959.000000   \n",
+       "\n",
+       "       DNI_Marseille  DHI_Marseille  ...      GHI_Paris      DNI_Paris  \\\n",
+       "count  105155.000000  105155.000000  ...  105155.000000  105155.000000   \n",
+       "mean      243.601236      52.191127  ...     142.896981     166.578652   \n",
+       "std       310.863053      67.619027  ...     216.149304     256.250506   \n",
+       "min         0.000000       0.000000  ...       0.000000       0.000000   \n",
+       "25%         0.000000       0.000000  ...       0.000000       0.000000   \n",
+       "50%        14.250000      10.500000  ...      10.000000       0.000000   \n",
+       "75%       533.800000      98.000000  ...     226.000000     275.100000   \n",
+       "max       952.600000     429.000000  ...     915.000000     940.200000   \n",
+       "\n",
+       "           DHI_Paris        T_Paris       WS_Paris    Cloud_Paris  \\\n",
+       "count  105155.000000  105155.000000  105155.000000  105155.000000   \n",
+       "mean       54.666121      12.673821      13.264429      62.028767   \n",
+       "std        75.674051       7.209525       6.833862      39.249842   \n",
+       "min         0.000000     -10.000000       0.000000       0.000000   \n",
+       "25%         0.000000       7.500000       8.000000      22.000000   \n",
+       "50%         8.000000      12.150000      12.000000      78.000000   \n",
+       "75%        94.000000      17.800000      17.250000     100.000000   \n",
+       "max       410.000000      40.800000      50.700000     100.000000   \n",
+       "\n",
+       "           hour_sin      hour_cos     month_sin     month_cos  \n",
+       "count  1.051550e+05  1.051550e+05  1.051550e+05  1.051550e+05  \n",
+       "mean   2.461310e-06 -1.233030e-04 -4.885167e-03 -2.210217e-03  \n",
+       "std    7.071534e-01  7.070669e-01  7.057033e-01  7.084939e-01  \n",
+       "min   -1.000000e+00 -1.000000e+00 -1.000000e+00 -1.000000e+00  \n",
+       "25%   -7.071068e-01 -7.071068e-01 -8.660254e-01 -8.660254e-01  \n",
+       "50%    1.224647e-16 -1.836970e-16 -2.449294e-16 -1.836970e-16  \n",
+       "75%    7.071068e-01  7.071068e-01  5.000000e-01  8.660254e-01  \n",
+       "max    1.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00  \n",
+       "\n",
+       "[8 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5e3559ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['time'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9cbc4c4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime64[ns, UTC]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['time'] = pd.to_datetime(df['time'])\n",
+    "df['time'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "28a571e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        2018-01-01 00:00:00+00:00\n",
+       "1        2018-01-01 00:30:00+00:00\n",
+       "2        2018-01-01 01:00:00+00:00\n",
+       "3        2018-01-01 01:30:00+00:00\n",
+       "4        2018-01-01 02:00:00+00:00\n",
+       "                    ...           \n",
+       "105150   2023-12-31 21:00:00+00:00\n",
+       "105151   2023-12-31 21:30:00+00:00\n",
+       "105152   2023-12-31 22:00:00+00:00\n",
+       "105153   2023-12-31 22:30:00+00:00\n",
+       "105154   2023-12-31 23:00:00+00:00\n",
+       "Name: time, Length: 105155, dtype: datetime64[ns, UTC]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['time']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85f25621",
+   "id": "91937a1a",
    "metadata": {},
    "outputs": [],
    "source": []
